[tool.poetry]
name = "rustsmith-validator"
version = "0.1.0"
description = ""
authors = ["Mayank Sharma <mayank.sharma.uk@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rsmith-validator = "rustsmith_validator.main:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
jupyterlab = "^3.5.1"
itables = "^1.4.1"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
